Version 2.1.175
    Fixed a bug where mcMMO would occasionally give a 65 item stack from a double smelt on a furnace
    Fixed a bug where arrows could be duped when fired from a crossbow with piercing enchantment

Version 2.1.174
    Some legacy color codes in our locale file were swapped to &-code equivalents (thanks ViaSnake)
    Updated hu_HU locale (thanks andris155)
    Updated ru locale (thanks imDaniX)
    Updated fr locale (thanks Elikill58)
    (API) Added SubSkillBlockEvent for some SubSkill events that have a block (eg: Green Thumb Block events)
    (API) Green Thumb (Block) now fires a SubSkillBlockEvent which is cancellable
    (API) Green Thumb (Plant) now fires SubSkillBlockEvent which is cancellable
    (API) Shroom Thumb now fires a SubSkillBlockEvent which is cancellable

    NOTE: A lot of sub-skills without random chance elements are missing events, this will be cleaned up in the near future. If you need something specific added sooner than that, post a GitHub issue for it and I'll patch it in.
    I'm likely to separate Green Thumb into two distinct skills in an upcoming patch
    Only Green Thumb/Shroom Thumb trigger the new SubSkillBlockEvent for now

Version 2.1.173
    The experience orbs dropped by Knock on Wood rank 2 during Tree Feller are now much less frequent but provide more XP
    mcMMO no longer damages fishing rods or drains a player's hunger when fishing
    Fixed a visual bug where players who had lucky perk were shown incorrect odds when using skill commands (such as /axes)
    Updated ja_JP locale (thanks ViaSnake)
    Fixed a bug where scoreboards were torn down inappropriately when moving to or from blacklisted worlds (thanks steve4744)
    Updated Kyori's adventure library to 4.4.0 (used by mcMMO to handle text components)

Version 2.1.172
    Updated german locale (thanks TheBusyBiscuit)